[metadata]
name = sphinx-web
version = latest

[options]
packages = sphinx_web
install_requires =
                 sphinx
                 python_version >= "3.5"

[options.entrypoints]
console_scripts =
                sphinx-tangle = sphinx_web.tangle:main
                sphinx-weave = sphinx_web.weave:main